[gd_scene load_steps=20 format=3 uid="uid://dmc5x13dofdss"]

[ext_resource type="Script" path="res://Scripts/HowToPlay.gd" id="1_2lc7h"]
[ext_resource type="Texture2D" uid="uid://bk0m8jyifajxp" path="res://Sprites/board.png" id="1_kwmov"]
[ext_resource type="PackedScene" uid="uid://jhttbnk5ug1m" path="res://Entities/Bricks/BrickBlue.tscn" id="2_467yr"]
[ext_resource type="FontFile" uid="uid://c57vjxkwlmkk3" path="res://Fonts/lit-small.fnt" id="3_q8xrf"]
[ext_resource type="FontFile" uid="uid://dr4ih4cnd4k0" path="res://Fonts/unlit-small.fnt" id="4_noj8d"]
[ext_resource type="Texture2D" uid="uid://68uslysbtfry" path="res://Sprites/menu-sidebar-overlay.png" id="5_1iapf"]
[ext_resource type="Texture2D" uid="uid://dp8ppr7v6i6ik" path="res://Sprites/Player.png" id="6_a8i6q"]
[ext_resource type="Texture2D" uid="uid://dqqonyt2nq8pk" path="res://Sprites/Player-shadow.png" id="7_vsf4o"]
[ext_resource type="Texture2D" uid="uid://dt3td72f4xdjk" path="res://Sprites/Ball.png" id="8_8vccj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g68vd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7m5mk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_82tly"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_otrsq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ab2r0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xu8so"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jrbby"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iwb7n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3t3up"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qsp3h"]

[node name="HowToPlay1" type="Node2D"]
script = ExtResource("1_2lc7h")
PreviousScene = "mainmenu"
NextScene = "page2"

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("1_kwmov")

[node name="BrickBlue" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-96, -62)

[node name="BrickBlue2" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-81, -62)

[node name="BrickBlue3" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-66, -62)

[node name="BrickBlue4" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-51, -62)

[node name="BrickBlue5" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-36, -62)

[node name="BrickBlue6" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-21, -62)

[node name="BrickBlue7" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-6, -62)

[node name="BrickBlue8" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(9, -62)

[node name="BrickBlue9" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(24, -62)

[node name="BrickBlue10" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-96, -54)

[node name="BrickBlue11" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-81, -54)

[node name="BrickBlue12" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-66, -54)

[node name="BrickBlue13" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-51, -54)

[node name="BrickBlue14" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-36, -54)

[node name="BrickBlue15" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-21, -54)

[node name="BrickBlue16" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(-6, -54)

[node name="BrickBlue17" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(9, -54)

[node name="BrickBlue18" parent="Board" instance=ExtResource("2_467yr")]
position = Vector2(24, -54)

[node name="HowToPlay" type="Label" parent="Board"]
offset_left = -96.0
offset_top = -83.0
offset_right = 37.0
offset_bottom = -54.0
theme_override_fonts/font = ExtResource("3_q8xrf")
text = "HOW TO PLAY"

[node name="HelpText" type="Label" parent="Board"]
offset_left = -142.0
offset_top = 21.0
offset_right = 75.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("4_noj8d")
text = "USING THE BAT, KEEP
THE BALL IN THE AIR
TO BREAK THE BRICKS"

[node name="Sidebar" type="Sprite2D" parent="."]
position = Vector2(275, 148)
texture = ExtResource("5_1iapf")

[node name="PrevButton" type="Button" parent="Sidebar"]
offset_left = -20.0
offset_top = -29.0
offset_right = 36.0
offset_bottom = -9.0
theme_override_fonts/font = ExtResource("4_noj8d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g68vd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7m5mk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_82tly")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_otrsq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ab2r0")
text = "MENU"

[node name="NextButton" type="Button" parent="Sidebar"]
offset_left = -20.0
offset_top = 12.0
offset_right = 34.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("4_noj8d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xu8so")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jrbby")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iwb7n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3t3up")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qsp3h")
text = "NEXT"

[node name="Player" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(133, 80)
texture = ExtResource("6_a8i6q")

[node name="Player-shadow" type="Sprite2D" parent="Player"]
z_index = -1
position = Vector2(4, 4)
texture = ExtResource("7_vsf4o")

[node name="Ball" type="Sprite2D" parent="."]
position = Vector2(133, 60)
texture = ExtResource("8_8vccj")

[connection signal="mouse_entered" from="Sidebar/PrevButton" to="." method="_on_prev_button_mouse_entered"]
[connection signal="mouse_exited" from="Sidebar/PrevButton" to="." method="_on_prev_button_mouse_exited"]
[connection signal="pressed" from="Sidebar/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="mouse_entered" from="Sidebar/NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="Sidebar/NextButton" to="." method="_on_next_button_mouse_exited"]
[connection signal="pressed" from="Sidebar/NextButton" to="." method="_on_next_button_pressed"]
