[gd_scene load_steps=19 format=3 uid="uid://b5fgp5spy8a2k"]

[ext_resource type="Texture2D" uid="uid://bk0m8jyifajxp" path="res://Sprites/board.png" id="1_ajnox"]
[ext_resource type="Script" path="res://Scripts/HowToPlay.gd" id="1_bs5yi"]
[ext_resource type="PackedScene" uid="uid://jhttbnk5ug1m" path="res://Entities/Bricks/BrickBlue.tscn" id="2_cx636"]
[ext_resource type="PackedScene" uid="uid://ckggcaamxkk3t" path="res://Entities/Bricks/BrickSilver.tscn" id="3_88h5h"]
[ext_resource type="FontFile" uid="uid://c57vjxkwlmkk3" path="res://Fonts/lit-small.fnt" id="3_jvbr6"]
[ext_resource type="FontFile" uid="uid://dr4ih4cnd4k0" path="res://Fonts/unlit-small.fnt" id="4_n8ebu"]
[ext_resource type="PackedScene" uid="uid://b4v24ehhh645k" path="res://Entities/Bricks/BrickGold.tscn" id="4_wpqlx"]
[ext_resource type="Texture2D" uid="uid://68uslysbtfry" path="res://Sprites/menu-sidebar-overlay.png" id="5_nkr43"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qd7pk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s3l83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ni8x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bk4bq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_04whv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhfsj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8frds"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eytsx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5dcv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05gbh"]

[node name="HowToPlay2" type="Node2D"]
script = ExtResource("1_bs5yi")
PreviousScene = "page1"
NextScene = "page3"

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("1_ajnox")

[node name="BrickBlue" parent="Board" instance=ExtResource("2_cx636")]
position = Vector2(-142, -51)

[node name="BrickSilver" parent="Board" instance=ExtResource("3_88h5h")]
position = Vector2(-142, -11)

[node name="BrickGold" parent="Board" instance=ExtResource("4_wpqlx")]
position = Vector2(-142, 25)

[node name="NormalBricks" type="Label" parent="Board"]
offset_left = -115.0
offset_top = -55.0
offset_right = 38.0
offset_bottom = -32.0
theme_override_fonts/font = ExtResource("4_n8ebu")
text = "NORMAL - 1 HIT"

[node name="SilverBricks" type="Label" parent="Board"]
offset_left = -115.0
offset_top = -16.0
offset_right = 46.0
offset_bottom = 7.0
theme_override_fonts/font = ExtResource("4_n8ebu")
text = "SILVER - 2 HITS"

[node name="GoldBricks" type="Label" parent="Board"]
offset_left = -115.0
offset_top = 21.0
offset_right = 71.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("4_n8ebu")
text = "GOLD - NORMAL
BALL CAN'T BREAK
GOLD BRICKS"

[node name="HowToPlay" type="Label" parent="Board"]
offset_left = -96.0
offset_top = -83.0
offset_right = 37.0
offset_bottom = -54.0
theme_override_fonts/font = ExtResource("3_jvbr6")
text = "HOW TO PLAY"

[node name="Sidebar" type="Sprite2D" parent="."]
position = Vector2(275, 148)
texture = ExtResource("5_nkr43")

[node name="PrevButton" type="Button" parent="Sidebar"]
offset_left = -20.0
offset_top = -29.0
offset_right = 36.0
offset_bottom = -9.0
theme_override_fonts/font = ExtResource("4_n8ebu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qd7pk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_s3l83")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6ni8x")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bk4bq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_04whv")
text = "PREV"

[node name="NextButton" type="Button" parent="Sidebar"]
offset_left = -20.0
offset_top = 12.0
offset_right = 34.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("4_n8ebu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mhfsj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8frds")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_eytsx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i5dcv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_05gbh")
text = "NEXT"

[connection signal="mouse_entered" from="Sidebar/PrevButton" to="." method="_on_prev_button_mouse_entered"]
[connection signal="mouse_exited" from="Sidebar/PrevButton" to="." method="_on_prev_button_mouse_exited"]
[connection signal="pressed" from="Sidebar/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="mouse_entered" from="Sidebar/NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="Sidebar/NextButton" to="." method="_on_next_button_mouse_exited"]
[connection signal="pressed" from="Sidebar/NextButton" to="." method="_on_next_button_pressed"]
