[gd_scene load_steps=18 format=3 uid="uid://cv128on788fpu"]

[ext_resource type="Texture2D" uid="uid://bk0m8jyifajxp" path="res://Sprites/board.png" id="1_5qejw"]
[ext_resource type="Script" path="res://Scripts/HowToPlay.gd" id="1_odvub"]
[ext_resource type="FontFile" uid="uid://c57vjxkwlmkk3" path="res://Fonts/lit-small.fnt" id="2_ea2v1"]
[ext_resource type="FontFile" uid="uid://dr4ih4cnd4k0" path="res://Fonts/unlit-small.fnt" id="3_g61jw"]
[ext_resource type="Texture2D" uid="uid://dib10dc4bx5ki" path="res://Sprites/Powerups/powerup-shield.png" id="4_ch8k7"]
[ext_resource type="Texture2D" uid="uid://b4qqjawyj1xo2" path="res://Sprites/Powerups/powerup-shield-shadow.png" id="5_dn6f7"]
[ext_resource type="Texture2D" uid="uid://68uslysbtfry" path="res://Sprites/menu-sidebar-overlay.png" id="6_q37b8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jd2xi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ucexs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gjv3p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvvju"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bftg3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwall"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_irfdu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p5b7p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ie641"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v8fjd"]

[node name="HowToPlay3" type="Node2D"]
script = ExtResource("1_odvub")
PreviousScene = "page2"
NextScene = "page4"

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("1_5qejw")

[node name="HowToPlay" type="Label" parent="Board"]
offset_left = -96.0
offset_top = -83.0
offset_right = 37.0
offset_bottom = -54.0
theme_override_fonts/font = ExtResource("2_ea2v1")
text = "HOW TO PLAY"

[node name="Powerups" type="Label" parent="Board"]
offset_left = -140.0
offset_top = -53.0
offset_right = 59.0
offset_bottom = -7.0
theme_override_fonts/font = ExtResource("3_g61jw")
text = "BROKEN BRICKS CAN
DROP POWERUPS:"

[node name="Powerup-shield" type="Sprite2D" parent="Board"]
z_index = 2
position = Vector2(-132, 7)
texture = ExtResource("4_ch8k7")

[node name="Powerup-shield-shadow" type="Sprite2D" parent="Board/Powerup-shield"]
z_as_relative = false
position = Vector2(4, 4)
texture = ExtResource("5_dn6f7")

[node name="Shield" type="Label" parent="Board"]
offset_left = -115.0
offset_top = -1.0
offset_right = -19.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("2_ea2v1")
text = "SHIELD"

[node name="Label" type="Label" parent="Board"]
offset_left = -115.0
offset_top = 20.0
offset_right = 58.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("3_g61jw")
text = "BALL CAN'T FALL
OFF THE BOARD
FOR 30 SECONDS"

[node name="Sidebar" type="Sprite2D" parent="."]
position = Vector2(275, 148)
texture = ExtResource("6_q37b8")

[node name="PrevButton" type="Button" parent="Sidebar"]
offset_left = -20.0
offset_top = -29.0
offset_right = 36.0
offset_bottom = -9.0
theme_override_fonts/font = ExtResource("3_g61jw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jd2xi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ucexs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gjv3p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dvvju")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bftg3")
text = "PREV"

[node name="NextButton" type="Button" parent="Sidebar"]
offset_left = -20.0
offset_top = 12.0
offset_right = 34.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("3_g61jw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cwall")
theme_override_styles/hover = SubResource("StyleBoxEmpty_irfdu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p5b7p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ie641")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v8fjd")
text = "NEXT"

[connection signal="mouse_entered" from="Sidebar/PrevButton" to="." method="_on_prev_button_mouse_entered"]
[connection signal="mouse_exited" from="Sidebar/PrevButton" to="." method="_on_prev_button_mouse_exited"]
[connection signal="pressed" from="Sidebar/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="mouse_entered" from="Sidebar/NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="Sidebar/NextButton" to="." method="_on_next_button_mouse_exited"]
[connection signal="pressed" from="Sidebar/NextButton" to="." method="_on_next_button_pressed"]
